css/theme-aspirin.css
.bg-primary {
  background-color: #eb7f00 !important;
}
.bg-secondary-1 {
  background-color: #225378 !important;
}
.bg-secondary-2 {
  background-color: #eb7f00 !important;
}
.bg-gray {
  background-color: #2f2f2f !important;
}
.bg-light {
  background-color: #F4F4F4 !important;
}
.bg-white {
  background-color: #fff !important;
}
.bg-dribbble {
  background-color: #ea4c89;
}
.bg-twitter {
  background-color: #00a0d1;
}
.bg-facebook {
  background-color: #3b5998;
}
.bg-googleplus {
  background-color: #c63d2d;
}
.bg-tumblr {
  background-color: #34526f;
}
.text-dribbble {
  color: #ea4c89;
}
.text-twitter {
  color: #00a0d1;
}
.text-facebook {
  color: #3b5998;
}
.text-googleplus {
  color: #c63d2d;
}
.text-tumblr {
  color: #34526f;
}
.text-white {
  color: #fff;
}
.text-primary {
  color: #eb7f00;
}
.standard-radius {
  border-radius: 25px;
}
.transition-500 {
  -webkit-transition: all .5s ease;
  -moz-transition: all .5s ease;
  transition: all .5s ease;
}
.transition-2000 {
  -webkit-transition: all 2s ease;
  -moz-transition: all 2s ease;
  transition: all 2s ease;
}
.transition-300 {
  -webkit-transition: all .3s ease;
  -moz-transition: all .3s ease;
  transition: all .3s ease;
}
.cover-div {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0px;
}
.blank-input {
  background: none;
  border: none;
  box-shadow: none;
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.font-body {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.font-heading {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
body {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  color: #777777;
  font-size: 14px;
  line-height: 24px;
}
h1,
h2,
h3,
h4,
h5,
h5,
h6 {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
  color: #333333;
  margin: 0px;
}
.alt-font {
  font-family: "Raleway", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 1px;
}
a {
    color: #eb7f00;
}
a:hover {
    text-decoration: none;
    color: #b66200;
}
ul {
  list-style: none;
  padding: 0px;
}
a:hover {
  text-decoration: none;
}
.pointer {
  cursor: pointer !important;
}
.uppercase {
  text-transform: uppercase;
}
img {
  max-width: 100%;
}
.jumbo-h1 {
  font-size: 40px;
  line-height: 56px;
  font-weight: 600;
  margin-bottom: 64px;
}
.standard-h1 {
  font-size: 32px;
  line-height: 44px;
  margin-bottom: 48px;
}
h1 {
  font-size: 32px;
  line-height: 44px;
  margin-bottom: 48px;
}
h2 {
  font-size: 28px;
  line-height: 44px;
}
h3 {
  font-size: 26px;
  line-height: 32px;
}
h5 {
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 16px;
}
h6 {
  font-size: 16px;
  font-weight: 600;
  margin-bottom: 16px;
}
strong {
  font-weight: 600;
}
p {
  font-size: 14px;
  line-height: 24px;
}
p.lead {
  font-size: 16px;
  line-height: 30px;
  font-weight: normal;
}
p:last-child {
  margin-bottom: 0px;
}
p a {
  color: #eb7f00;
}
.quote-text {
  font-size: 24px;
  line-height: 40px;
  font-style: italic;
  font-weight: 300;
}
span.text-white a {
  font-weight: 600;
  color: #fff;
}
.main-container {
  -webkit-transition: all .3s ease;
  -moz-transition: all .3s ease;
  transition: all .3s ease;
  -webkit-transform: translate3d(0px, 0, 0);
  -moz-transform: translate3d(0px, 0, 0);
  transform: translate3d(0px, 0, 0);
  overflow: hidden;
}
.main-container.reveal-nav {
  -webkit-transform: translate3d(-300px, 0, 0);
  -moz-transform: translate3d(-300px, 0, 0);
  transform: translate3d(-300px, 0, 0);
}
.loader {
  position: fixed;
  width: 100%;
  height: 100%;
  background: #fff;
  z-index: 9999;
  text-align: center;
  -webkit-transition: all .5s ease;
  -moz-transition: all .5s ease;
  transition: all .5s ease;
  opacity: 1;
}
.spinner {
  width: 40px;
  height: 40px;
  position: relative;
  top: 50%;
  left: 50%;
  margin-left: -20px;
  margin-top: -20px;
}
.double-bounce1,
.double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #eb7f00;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-animation: bounce 2s infinite ease-in-out;
  animation: bounce 2s infinite ease-in-out;
}
.double-bounce2 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}
@-webkit-keyframes bounce {
  0%,
  100% {
    -webkit-transform: scale(0);
  }
  50% {
    -webkit-transform: scale(1);
  }
}
@keyframes bounce {
  0%,
  100% {
    transform: scale(0);
    -webkit-transform: scale(0);
  }
  50% {
    transform: scale(1);
    -webkit-transform: scale(1);
  }
}
section {
  padding-top: 80px;
  padding-bottom: 80px;
  position: relative;
  overflow: hidden;
}
section.pad-large {
  padding-top: 160px;
  padding-bottom: 160px;
}
section.duplicatable-content {
  padding-bottom: 40px;
}
section:nth-of-type(odd) {
  background: #f4f4f4;
}
section:nth-of-type(even) {
  background: #ffffff;
}
.no-pad {
  padding: 0px;
}
.no-pad-top {
  padding-top: 0px !important;
}
.no-pad-left {
  padding-left: 0px;
}
.no-pad-right {
  padding-right: 0px;
}
.no-pad-bottom {
  padding-bottom: 0px;
}
.space-top-small {
  margin-top: 20px !important;
}
.space-bottom-medium {
  margin-bottom: 40px !important;
}
.space-bottom-large {
  margin-bottom: 80px !important;
}
.space-bottom-xlarge {
  margin-bottom: 160px !important;
}
.no-margin {
  margin: 0;
}
.no-margin-bottom {
  margin-bottom: 0px !important;
}
.btn {
  background: none;
  -webkit-transition: all .3s ease;
  -moz-transition: all .3s ease;
  transition: all .3s ease;
  min-width: 155px;
}
.btn:hover {
  background: none;
  color: #fff;
  border-color: #eb7f00;
  background-color: #eb7f00;
}
/* ... */

